--- a/css/styles.css
+++ b/css/styles.css
@@ -1,19 +1,4 @@
-/*#template_settings {
-	display: none;
-}
-
-#template_settings:target {
-	display: block;
-}
-
-#email_settings {
-	display: none;
-}
-
-#email_settings:target {
-	display: block;
-}
-*/
-  .text-muted {
+.text-muted 
+{
 	color: #6c757d !important;
-  }
+}
